Move towards supported JAXBContextFactory provider
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>